add file star apis
